--- a/.gitignore
+++ b/.gitignore
@@ -336,3 +336,11 @@ Hunting Queries/DeployedQueries.json
 
 #Mac OSx
 .DS_Store
+DataConnectors/AWS-S3/Logs/AwsS3-07021417.csv
+DataConnectors/AWS-S3/Logs/AwsS3-07021424.csv
+DataConnectors/AWS-S3/Logs/AwsS3-07021457.csv
+DataConnectors/AWS-S3/Logs/AwsS3-07021501.csv
+DataConnectors/AWS-S3/Logs/AwsS3-07021502.csv
+DataConnectors/AWS-S3/Logs/AwsS3-07021509.csv
+DataConnectors/AWS-S3/Logs/AwsS3-07031145.csv
+DataConnectors/AWS-S3/Logs/AwsS3-07031201.csv
